--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repos.</p>
 <p>DobreTech is the best.</p>
+<p>DobreTech team cloud</p>
+<p>DobreTech is the best.</p>
 
 </body>
 </html>
